# gakumas-screenshot

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  config.json  gakumas-screenshot.manifest  gakumas-screenshot.rc
.claude/commands/: debug-ocr.md
docs/: EXECPLAN_ADDITIONAL_RUNS_AND_PRESETS.md  EXECPLAN_CALIBRATION_TOOL.md  EXECPLAN_GUI_STATE_DRIVEN_PANEL.md  EXECPLAN_LIVE_BOX_PLOT.md  EXECPLAN_OCR_REVIEW_EDIT_GUI.md  EXECPLAN_OCR_TOTAL_BONUS_ROBUSTNESS.md  EXECPLAN_OVERLAP_SCORE_RECOVERY.md  EXECPLAN_PHASE1_REMAINING.md  EXECPLAN_PHASE2_OCR.md  EXECPLAN_PHASE3_AUTOMATION.md  EXECPLAN_PHASE4_STATISTICS.md  EXECPLAN_PHASE5_GUI.md  EXECPLAN_REFACTOR_MODULES.md  EXECPLAN_RESUME_AUTOMATION.md  EXECPLAN_REVIEW_INLINE_STAGE_CROPS.md  EXECPLAN_REVIEW_SAVE_UX.md  EXECPLAN_REVIEW_VERIFIED_STATE.md  EXECPLAN_TESSERACT_BUNDLE.md  ROADMAP_AUTOMATION.md  gakumas-rehearsal-ocr-approach.md
scripts/: debug_ocr_regions.py  debug_total_bonus.py  package-release.ps1  prepare-tesseract.ps1  region_tuner.py
src/: main.rs  paths.rs
src/analysis/: charts.rs  config.rs  csv_reader.rs  export.rs  mod.rs  statistics.rs
src/automation/: config.rs  csv_writer.rs  detection.rs  input.rs  mod.rs  ocr_worker.rs  queue.rs  runner.rs  session_meta.rs  state.rs
src/calibration/: coords.rs  mod.rs  preview.rs  state.rs  wizard.rs
src/capture/: mod.rs  region.rs  screenshot.rs  window.rs
src/gui/: mod.rs  render.rs  state.rs
src/ocr/: engine.rs  extract.rs  mod.rs  preprocess.rs  reconcile.rs  setup.rs
src/ocr/testdata/: overlap_replay_20260628.csv
