[package]
name = "gakumas-screenshot"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.58", features = [
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging",
    "Foundation",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]}
image = "0.25"
chrono = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OCR dependencies (Phase 2)
reqwest = { version = "0.12", features = ["blocking"] }
dirs = "5.0"
regex = "1.10"
zip = "2.2"
tempfile = "3.14"

# Statistics & Charts (Phase 4)
plotters = "0.3"

# GUI (Phase 5)
eframe = "0.29"
tray-icon = "0.19"

[build-dependencies]
embed-resource = "3"

[profile.release]
lto = true
strip = true
